increase opacity, spacing fixes for words with subdefinition and normal definition

--- a/static/style.css
+++ b/static/style.css
@@ -18,8 +18,8 @@
   
     /* colour with transparency */
     background-color:#000; /* for IE */
-    filter:alpha(opacity=70); /* CSS3 standard */
-    opacity:0.7;
+    filter:alpha(opacity=75); /* CSS3 standard */
+    opacity:0.75;
 }
 
 #header {
@@ -78,7 +78,7 @@ ol {
   color: #fff;
 }
 li {
-  margin-bottom: 1em;
+  margin-top: 1em;
 }
 
 ul {
